<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    
    android:background="@color/white_color"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/court_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="false"
        android:gravity="center"
        android:padding="@dimen/padding_10"
        android:background="@color/blue_header"
        android:text="@string/cancel_slot"
        android:textColor="@color/white_color"
        android:textSize="@dimen/text_size16" />
       <View
            android:layout_width="match_parent"
            android:layout_height="3px"
            android:background="@color/white_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_header"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/padding_10"
            android:text="@string/no"
            android:textColor="@color/white_color"
            android:textSize="@dimen/text_size16" />

        <View
            android:layout_width="3px"
            android:layout_height="match_parent"
            android:background="@color/white_color" />

        <TextView
            android:id="@+id/done"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/padding_10"
            android:text="@string/yes"
            android:textColor="@color/white_color"
            android:textSize="@dimen/text_size16" />
    </LinearLayout>

</LinearLayout>