<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >
<!-- addadmin_profileImage -->
            <ImageView
                android:id="@+id/addadmin_profileImage"
                android:layout_width="@dimen/edit_profile_size"
                android:layout_height="@dimen/edit_profile_size"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:layout_gravity="center"
                android:src="@drawable/logo_profile" />

            <ImageButton
                android:layout_marginLeft="@dimen/margin_10"
                android:id="@+id/addadmin_pickfile"
                android:layout_width="@dimen/edit_btn_size"
                android:layout_height="@dimen/edit_btn_size"
                android:layout_gravity="bottom|right"
                android:background="@drawable/edit_btn"
                
                android:contentDescription="@string/app_name" />

            <ProgressBar
                android:visibility="gone"
                android:id="@+id/prog"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_10"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/addadmin_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_10"
                android:background="@drawable/edittext_background"
                android:hint="@string/first_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingLeft="@dimen/margin_20"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textColor="@color/black_color"
                android:textColorHint="@color/gray_color"
                android:textSize="@dimen/text_size14" />

            <EditText
                android:id="@+id/addadmin_lastname"
                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                android:padding="@dimen/padding_10"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/edittext_background"
                android:hint="@string/last_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingLeft="@dimen/margin_20"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textColor="@color/black_color"
                android:textColorHint="@color/gray_color"
                android:textSize="@dimen/text_size14" />

            <EditText
                android:id="@+id/addadmin_email"
                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                android:padding="@dimen/padding_10"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/edittext_background"
                android:hint="@string/user_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:paddingLeft="@dimen/margin_20"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textColor="@color/black_color"
                android:textColorHint="@color/gray_color"
                android:textSize="@dimen/text_size14" />

            <EditText
                android:id="@+id/addadmin_phone"
                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                android:padding="@dimen/padding_10"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/edittext_background"
                android:hint="@string/phone"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:paddingLeft="@dimen/margin_20"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textColor="@color/black_color"
                android:textColorHint="@color/gray_color"
                android:textSize="@dimen/text_size14" />
           
            
            
            
            
            <EditText
                android:layout_margin="@dimen/padding_5"
                android:gravity="top"
                android:id="@+id/addabout_url_edittxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/edittext_background"
                android:hint="@string/about"
                android:imeOptions="actionDone"
               android:minLines="4"
                android:paddingLeft="@dimen/margin_20"
                android:scrollHorizontally="true"
               
                android:textColor="@color/black_color"
                android:textColorHint="@color/gray_color"
                android:textSize="@dimen/text_size14" />
            
            <EditText
                android:id="@+id/linkedin_url_edittxt"
                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                android:padding="@dimen/padding_10"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/edittext_background"
                android:hint="@string/linkedin_link"
                android:imeOptions="actionDone"
             
                android:paddingLeft="@dimen/margin_20"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textColor="@color/black_color"
                android:textColorHint="@color/gray_color"
                android:textSize="@dimen/text_size14" />
            
            <EditText
                android:id="@+id/instagram_url_edittxt"
                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                android:padding="@dimen/padding_10"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/edittext_background"
                android:hint="@string/instramgram_link"
                android:imeOptions="actionDone"
               
                android:paddingLeft="@dimen/margin_20"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textColor="@color/black_color"
                android:textColorHint="@color/gray_color"
                android:textSize="@dimen/text_size14" />
            
<EditText
                android:id="@+id/face_book_url_edittxt"
                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                android:padding="@dimen/padding_10"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/edittext_background"
                android:hint="@string/face_book_link"
                android:imeOptions="actionDone"
             
                android:paddingLeft="@dimen/margin_20"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textColor="@color/black_color"
                android:textColorHint="@color/gray_color"
                android:textSize="@dimen/text_size14" />


<EditText
                android:id="@+id/twitter_url_edittxt"
                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                android:padding="@dimen/padding_10"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/edittext_background"
                android:hint="@string/twitter_link"
                android:imeOptions="actionDone"
              
                android:paddingLeft="@dimen/margin_20"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textColor="@color/black_color"
                android:textColorHint="@color/gray_color"
                android:textSize="@dimen/text_size14" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textColor="@color/white_color"
                    android:textColorHint="@color/white_color"
                    android:ems="4"
                    android:textSize="@dimen/text_size14" />

                <ToggleButton
                    android:id="@+id/addadmin_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:background="@drawable/gender_xml"
                    android:checked="true"
                    android:textOff=""
                    android:textOn="" />
            </LinearLayout>
            
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:gravity="center"
                android:id="@+id/juniour_view"
                android:visibility="gone"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/junior"
                    android:textColor="@color/white_color"
                    android:textColorHint="@color/white_color"
                    android:ems="4"
                    android:textSize="@dimen/text_size14" />

                <ToggleButton
                    android:id="@+id/juniour_seniour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:background="@drawable/junior"
                    android:checked="true"
                    android:textOff=""
                    android:textOn="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/ratting_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    android:textColor="@color/white_color"
                    android:textColorHint="@color/gray_color"
                    android:textSize="@dimen/text_size14" />

                <RatingBar
                    android:id="@+id/addadmin_ratingBar"
                    style="@style/foodRatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:numStars="5"
                    android:stepSize="0.5" />
            </LinearLayout>

            <Button
                android:id="@+id/adminList_addAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_20"
                android:background="@drawable/okbutton"
                android:gravity="center"
                android:src="@drawable/okbutton"
                android:textColor="@color/white_color"
                android:textSize="@dimen/text_size18" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>