<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/margin_20"
    android:background="@color/white_color"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/select_all_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_header"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/padding_10" >

        <ImageView
            android:id="@+id/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_10"
            android:src="@drawable/previous_btn" />

        <TextView
            android:id="@+id/court_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_weight="1"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/select_all"
            android:textColor="@color/white_color"
            android:textSize="@dimen/text_size16" />

        <ImageView
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_10"
            android:src="@drawable/nxt_btn" />
    </LinearLayout>

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_10"
        android:layout_weight="1"
        android:divider="@color/white_color"
        android:dividerHeight="@dimen/margin_5" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_header"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/padding_10"
            android:text="@string/cancel"
            android:textColor="@color/white_color"
            android:textSize="@dimen/text_size16" />

        <View
            android:layout_width="3px"
            android:layout_height="match_parent"
            android:background="@color/white_color" />

        <TextView
            android:id="@+id/done"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/padding_10"
            android:text="@string/done"
            android:textColor="@color/white_color"
            android:textSize="@dimen/text_size16" />
    </LinearLayout>

</LinearLayout>